# QtOpenGL3.2Core

./: CMakeLists.txt  Core3_2_context.h  GLWidget.cpp  GLWidget.h  QtOpenGL3.2Core.pro  README.md  core-profile.qrc  core_profile_attributes.mm  glheader.cpp  glheader.h  main.cpp  mainwindow.cpp  mainwindow.h  simple.frag  simple.vert
